--- a/package.json
+++ b/package.json
@@ -28,6 +28,15 @@
   "devDependencies": {
     "babel-eslint": "^6.0.0",
     "eslint": "^2.3.0",
-    "eslint-plugin-babel": "^3.1.0"
+    "eslint-plugin-babel": "^3.1.0",
+    "chai": "~3.4.1",
+    "grunt": "~0.4.5",
+    "grunt-mocha-test": "~0.12.7",
+    "mocha": "~2.3.4",
+    "mocha-jenkins-reporter": "^0.1.9",
+    "mockgoose": "5.3.0",
+    "proxyquire": "1.7.4",
+    "sinon": "~1.17.2",
+    "supertest": "^1.1.0"
   }
 }
