--- a/package.json
+++ b/package.json
@@ -9,34 +9,34 @@
   "bugs": {
     "url": "https://github.com/DukeBaird/recipe-book/issues"
   },
-  "main": "lib/main.js",
+  "main": "build/main.js",
   "author": "Ben Craig",
   "license": "BSD-2-Clause",
   "scripts": {
-    "build": "babel src -d lib",
-    "start": "node lib/main.js"
+    "build": "babel src -d build",
+    "start": "node build/main.js"
   },
   "dependencies": {
-    "babel-cli": "^6.6.5",
-    "babel-polyfill": "^6.7.2",
-    "babel-preset-es2015": "^6.6.0",
-    "body-parser": "~1.12.4",
-    "express": "~4.12.4",
-    "mongoose": "4.2.9",
+    "babel-cli": "^6.18.0",
+    "babel-polyfill": "^6.20.0",
+    "babel-preset-es2015": "^6.18.0",
+    "body-parser": "^1.15.2",
+    "express": "^4.14.0",
+    "mongoose": "^4.7.5",
     "pug": "^2.0.0-beta6"
   },
   "devDependencies": {
-    "babel-eslint": "^6.0.0",
-    "eslint": "^2.3.0",
-    "eslint-plugin-babel": "^3.1.0",
-    "chai": "~3.4.1",
-    "grunt": "~0.4.5",
-    "grunt-mocha-test": "~0.12.7",
-    "mocha": "~2.3.4",
-    "mocha-jenkins-reporter": "^0.1.9",
-    "mockgoose": "5.3.0",
-    "proxyquire": "1.7.4",
-    "sinon": "~1.17.2",
-    "supertest": "^1.1.0"
+    "babel-eslint": "^7.1.1",
+    "chai": "^3.5.0",
+    "eslint": "^3.12.2",
+    "eslint-plugin-babel": "^4.0.0",
+    "grunt": "^1.0.1",
+    "grunt-mocha-test": "^0.13.2",
+    "mocha": "^3.2.0",
+    "mocha-jenkins-reporter": "^0.3.5",
+    "mockgoose": "^6.0.8",
+    "proxyquire": "^1.7.10",
+    "sinon": "^1.17.7",
+    "supertest": "^2.0.1"
   }
 }
