--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "test": "grunt"
   },
   "dependencies": {
+    "async": "^2.1.4",
     "babel-cli": "^6.18.0",
     "babel-polyfill": "^6.20.0",
     "babel-preset-es2015": "^6.18.0",
@@ -33,10 +34,10 @@
     "eslint-plugin-babel": "^4.0.0",
     "grunt": "^1.0.1",
     "grunt-mocha-test": "^0.13.2",
-    "mocha": "^3.2.0",
-    "mocha-jenkins-reporter": "^0.3.5",
-    "mockgoose": "^6.0.8",
-    "proxyquire": "^1.7.10",
+    "mocha": "~2.3.4",
+    "mocha-jenkins-reporter": "^0.1.9",
+    "mockgoose": "5.3.0",
+    "proxyquire": "^1.7.4",
     "sinon": "^1.17.7",
     "supertest": "^2.0.1"
   }
