--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "bluebird": "^3.5.0",
     "body-parser": "^1.15.2",
     "express": "^4.14.0",
-    "mongoose": "^4.7.5"
+    "mongoose": "^4.7.5",
+    "pug": "^2.0.0-beta.12"
   },
   "devDependencies": {
     "babel-eslint": "^7.1.1",
