--- a/package.json
+++ b/package.json
@@ -16,21 +16,28 @@
     "build": "babel src -d build",
     "start": "node build/main.js",
     "sass": "sass ./public/css/style.sass ./public/css/style.css",
-    "test": "grunt"
+    "test": "grunt",
+    "pack": "webpack --config webpack.config.js"
   },
   "dependencies": {
     "async": "^2.1.4",
-    "babel-cli": "^6.18.0",
-    "babel-polyfill": "^6.20.0",
-    "babel-preset-es2015": "^6.18.0",
     "bluebird": "^3.5.0",
     "body-parser": "^1.15.2",
     "express": "^4.14.0",
     "mongoose": "^4.7.5",
-    "pug": "^2.0.0-beta.12"
+    "pug": "^2.0.0-beta.12",
+    "react": "^15.6.1",
+    "react-dom": "^15.6.1"
   },
   "devDependencies": {
+    "babel-cli": "^6.18.0",
+    "babel-core": "^6.26.0",
     "babel-eslint": "^7.1.1",
+    "babel-loader": "^7.1.2",
+    "babel-polyfill": "^6.20.0",
+    "babel-preset-env": "^1.6.0",
+    "babel-preset-es2015": "^6.18.0",
+    "babel-preset-react": "^6.24.1",
     "chai": "^3.5.0",
     "eslint": "^3.12.2",
     "eslint-plugin-babel": "^4.0.0",
@@ -41,6 +48,7 @@
     "mockgoose": "5.3.0",
     "proxyquire": "^1.7.4",
     "sinon": "^1.17.7",
-    "supertest": "^2.0.1"
+    "supertest": "^2.0.1",
+    "webpack": "^3.5.5"
   }
 }
