--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "eslint-plugin-babel": "^4.0.0",
     "grunt": "^1.0.1",
     "grunt-mocha-test": "^0.13.2",
+    "html-webpack-plugin": "^2.30.1",
     "mocha": "~2.3.4",
     "mocha-jenkins-reporter": "^0.1.9",
     "mockgoose": "5.3.0",
