--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "mongoose": "^4.7.5",
     "pug": "^2.0.0-beta.12",
     "react": "^15.6.1",
-    "react-dom": "^15.6.1"
+    "react-dom": "^15.6.1",
+    "react-router-dom": "^4.2.2"
   },
   "devDependencies": {
     "babel-cli": "^6.18.0",
