--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "body-parser": "^1.15.2",
     "express": "^4.14.0",
     "mongoose": "^4.7.5",
+    "morgan": "^1.8.2",
     "pug": "^2.0.0-beta.12",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
