--- a/package.json
+++ b/package.json
@@ -45,16 +45,21 @@
     "babel-preset-es2015": "^6.18.0",
     "babel-preset-react": "^6.24.1",
     "chai": "^3.5.0",
+    "css-loader": "^0.28.11",
     "eslint": "^3.12.2",
     "eslint-plugin-babel": "^4.0.0",
+    "extract-text-webpack-plugin": "^3.0.2",
     "grunt": "^1.0.1",
     "grunt-mocha-test": "^0.13.2",
     "html-webpack-plugin": "^2.30.1",
     "mocha": "~2.3.4",
     "mocha-jenkins-reporter": "^0.1.9",
     "mockgoose": "5.3.0",
+    "node-sass": "^4.8.3",
     "proxyquire": "^1.7.4",
+    "sass-loader": "^6.0.7",
     "sinon": "^1.17.7",
+    "style-loader": "^0.20.3",
     "supertest": "^2.0.1",
     "webpack": "^3.5.5"
   }
