--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "express": "^4.14.0",
     "mongoose": "^4.7.5",
     "morgan": "^1.8.2",
+    "npm": "^6.1.0",
     "pug": "^2.0.0-beta.12",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
