--- a/package.json
+++ b/package.json
@@ -50,7 +50,8 @@
     "eslint": "^3.12.2",
     "eslint-plugin-babel": "^4.0.0",
     "extract-text-webpack-plugin": "^3.0.2",
-    "grunt": "^1.0.1",
+    "grunt": "^1.0.2",
+    "grunt-cli": "^1.3.2",
     "grunt-mocha-test": "^0.13.2",
     "html-webpack-plugin": "^2.30.1",
     "mocha": "~2.3.4",
