Test script change

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -20,7 +20,7 @@ stages:
   dependencies:
     - prepare:recipe-book
   script: 
-    - grunt
+    - npm run-script test
   stage: test
 
 .build: &build
