--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "build": "babel src -d build",
     "start": "node build/main.js",
     "sass": "sass ./public/css/style.sass ./public/css/style.css",
-    "test": "grunt",
+    "unit-tests": "mocha --ui tdd --compilers js:babel-core/register tests/**/*.js",
     "pack": "webpack --config webpack.config.js"
   },
   "dependencies": {
@@ -52,6 +52,7 @@
     "extract-text-webpack-plugin": "^3.0.2",
     "grunt": "^1.0.2",
     "grunt-cli": "^1.3.2",
+    "grunt-cli-babel": "0.0.5",
     "grunt-mocha-test": "^0.13.2",
     "html-webpack-plugin": "^2.30.1",
     "mocha": "~2.3.4",
